--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-md-5"
+            class="col-lg-5"
             data-aos="fade-right"
             data-aos-offset="200"
             data-aos-easing="ease-in-sine"
@@ -128,7 +128,7 @@
             <h1>Accuracy, Speed & Rigidity</h1>
           </div>
           <div
-            class="col-md-7 accuracy-right"
+            class="col-lg-7 accuracy-right"
             data-aos="fade-left"
             data-aos-offset="200"
             data-aos-easing="ease-in-sine"
